--- a/src/pages/aboutme.astro
+++ b/src/pages/aboutme.astro
@@ -4,7 +4,7 @@ import Layout from "../components/Layout.astro";
 import Avatar from "../images/avatar.jpeg";
 ---
 
-<Layout title="Welcome to Astro Neumorphism template">
+<Layout title="Welcome to Joshua's Site'">
   <MainContainer>
     <div class="flex flex-col md:flex-row items-center space-x-4 shadow-box-up dark:shadow-orange-dark p-4 md:p-6 rounded-xl">
       <img
@@ -13,9 +13,9 @@ import Avatar from "../images/avatar.jpeg";
         alt="Bordered avatar"
       />
       <div class="font-medium dark:text-white">
-        <div class="mb-2 md:mb-0">pabloLC</div>
+        <div class="mb-2 md:mb-0">JoshuaP</div>
         <div class="text-xs text-gray-500 dark:text-gray-400">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+          <p>I have come to believe that the responsible and ethical integration of AI and humanity is not just a technical challenge, but a profound philosophical and moral endeavor. It is a journey that requires us to grapple with the mysteries of intelligence, consciousness, and the nature of what it means to be human.</p>
         </div>
       </div>
     </div>
