--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -26,6 +26,16 @@ const { title } = Astro.props as Props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<title>{title}</title>
+		<script>
+ window.difyChatbotConfig = { 
+  token: 'uBhPxm3b5mRTgrl0'
+ }
+</script>
+<script
+ src="https://udify.app/embed.min.js"
+ id="uBhPxm3b5mRTgrl0"
+ defer>
+</script>
 	</head>
 
 	<body
@@ -43,10 +53,10 @@ const { title } = Astro.props as Props;
 					class="flex flex-col self-end text-right ml-auto text-xl w-fit text-light-blue-dark dark:text-dark-blue-light"
 				>
 					<h1 class="font-black leading-extra-loose md:text-3xl 2xl:text-4xl">
-						Astro
+						Ai Agents
 					</h1>
 					<h1 class="font-thin leading-extra-loose text-sm md:text-2xl 2xl:text-4xl">
-						Neumorphism
+						& Algorithms
 					</h1>
 				</div>
 
@@ -65,8 +75,8 @@ const { title } = Astro.props as Props;
 						</RoundIconButton>
 						<span class="mr-4"></span>
 						<SquareIconLink
-							title="Link to pabloLC GitHub"
-							href="https://github.com/paablolc/"
+							title="Link to joshuap GitHub"
+							href="https://github.com/sebastianp23/"
 							target="_blank"
 						>
 							<IconGithub />
