--- a/src/components/TextSlide.astro
+++ b/src/components/TextSlide.astro
@@ -4,11 +4,11 @@
 <div class="flex font-thin text-light-blue-dark dark:text-dark-blue-light px-6">
   <div class="relative scroller w-16 overflow-hidden">
     <span class="absolute top-0 tracking-wide font-black animate-slide-text">
-      Build<br />
-      Code<br />
       Create<br />
-      Design
+      Break<br />
+      Repeat<br />
+     
     </span>
   </div>
-  <div>for everyone</div>
+  <div>Ai for everyone</div>
 </div>
